[project]
name = "atlas-of-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "firecrawl-py>=2.12.0",
    "groq>=0.29.0",
    "langchain[groq]>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph>=0.5.0",
    "python-dotenv>=1.1.1",
]
